Add Arch testing repos as test

--- a/arkdep-build.d/atomicarch/pacman.conf
+++ b/arkdep-build.d/atomicarch/pacman.conf
@@ -77,7 +77,13 @@ Server = https://repo.arkanelinux.org/$repo/os/$arch
 [arkane-cauldron]
 Server = https://repo.arkanelinux.org/$repo/os/$arch
 
+[core-testing]
+Server = https://mirror.cj2.nl/archlinux/$repo/os/$arch
+
 [core]
+Server = https://mirror.cj2.nl/archlinux/$repo/os/$arch
+
+[extra-testing]
 Server = https://mirror.cj2.nl/archlinux/$repo/os/$arch
 
 [extra]
@@ -95,8 +101,8 @@ Server = https://mirror.cj2.nl/archlinux/$repo/os/$arch
 # If you want to run 32 bit applications on your x86_64 system,
 # enable the multilib repositories as required here.
 
-#[multilib-testing]
-#Server = https://mirror.cj2.nl/archlinux/$repo/os/$arch
+[multilib-testing]
+Server = https://mirror.cj2.nl/archlinux/$repo/os/$arch
 
 [multilib]
 Server = https://mirror.cj2.nl/archlinux/$repo/os/$arch
