Add improved GitHub Actions workflows for AtomicArch builds
- Add build-atomicarch-minimal.yml: Ultra-minimal storage requirements (5GB+2GB)
- Fix build-atomicarch-container.yml: Add missing arch-install-scripts package
- Improve build-atomicarch-simple.yml: Better storage optimization and patching
- Fix build-atomicarch.yml: Use proper Arch mirrors instead of broken package URLs
- Update documentation with workflow recommendations

These workflows are optimized for GitHub Actions' ~14GB storage constraints.

--- a/.github/workflows/build-atomicarch-container.yml
+++ b/.github/workflows/build-atomicarch-container.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Install git and dependencies
       run: |
         pacman -Syu --noconfirm
-        pacman -S --noconfirm git base-devel btrfs-progs squashfs-tools xz wget curl
+        pacman -S --noconfirm git base-devel btrfs-progs squashfs-tools xz wget curl arch-install-scripts
 
     - name: Checkout repository
       uses: actions/checkout@v4
