--- a/.github/workflows/build-atomicarch-ultralight.yml
+++ b/.github/workflows/build-atomicarch-ultralight.yml
@@ -96,8 +96,8 @@ jobs:
         # Backup original
         cp arkdep-build arkdep-build-original
         
-        # Create an extremely minimal version
-        cat > arkdep-build-ultra << 'EOF'
+        # Create an extremely minimal version using cat with stdin
+        cat > arkdep-build-ultra << 'SCRIPT_EOF'
 #!/usr/bin/env bash
 
 # Ultra-minimal arkdep build for GitHub Actions
@@ -137,7 +137,7 @@ mkdir -p "$output_target/$BUILD_NAME"
 cp -r "$variantdir"/* "$output_target/$BUILD_NAME/" 2>/dev/null || true
 
 # Create a build info file
-cat > "$output_target/$BUILD_NAME/build-info.txt" << EOB
+cat > "$output_target/$BUILD_NAME/build-info.txt" << BUILD_INFO_EOF
 Build Type: Minimal GitHub Actions Build
 Build Date: $BUILD_DATE
 Variant: $variant
@@ -146,12 +146,12 @@ Full Build: No
 
 This is a minimal configuration-only build due to GitHub Actions storage constraints.
 For a full build, use a system with more available storage.
-EOB
+BUILD_INFO_EOF
 
 echo "Minimal build created at: $output_target/$BUILD_NAME"
 ls -la "$output_target/$BUILD_NAME"
 
-EOF
+SCRIPT_EOF
 
         chmod +x arkdep-build-ultra
         
@@ -202,7 +202,7 @@ EOF
         else
           echo "No build output, creating documentation archive"
           mkdir -p docs
-          cat > docs/README.md << EOF
+          cat > docs/README.md << 'DOCS_EOF'
 # AtomicArch Minimal Build
 
 This is a minimal configuration-only build created due to GitHub Actions storage constraints.
@@ -221,11 +221,10 @@ This is a minimal configuration-only build created due to GitHub Actions storage
 ## To create a full build:
 1. Clone this repository
 2. Run on a system with adequate storage (50GB+)
-3. Execute: \`sudo arkdep-build atomicarch\`
+3. Execute: `sudo arkdep-build atomicarch`
 
-Build Date: ${{ steps.build_info.outputs.build_date }}
 Build Type: Configuration-only (GitHub Actions)
-EOF
+DOCS_EOF
           
           tar -czf atomicarch-minimal-${{ steps.build_info.outputs.build_date }}.tar.gz docs target 2>/dev/null || tar -czf atomicarch-minimal-${{ steps.build_info.outputs.build_date }}.tar.gz docs
         fi
