Update build-atomicarch.yml  turn off daily build

--- a/.github/workflows/build-atomicarch.yml
+++ b/.github/workflows/build-atomicarch.yml
@@ -3,7 +3,7 @@ name: Build AtomicArch Daily
 on:
   schedule:
     # Run daily at 2:00 AM UTC
-    - cron: '0 2 * * *'
+    # - cron: '0 2 * * *'
   workflow_dispatch: # Allow manual triggering
   push:
     branches: [ main, master ]
