--- a/.github/workflows/build-atomicarch.yml
+++ b/.github/workflows/build-atomicarch.yml
@@ -1,7 +1,7 @@
 name: Build AtomicArch Daily
 
 on:
-  schedule:
+  #schedule:
     # Run daily at 2:00 AM UTC
     # - cron: '0 2 * * *'
   workflow_dispatch: # Allow manual triggering
