--- a/arkdep-build.d/cachyatomic/pacman.conf
+++ b/arkdep-build.d/cachyatomic/pacman.conf
@@ -78,19 +78,19 @@ Server = https://repo.arkanelinux.org/$repo/os/$arch
 Server = https://repo.arkanelinux.org/$repo/os/$arch
 
 [cachyos-znver4]
-Server = https://nl-ams.soulharsh007.dev/repo/$arch_v4/$repo
+Server = https://mirror.cachyos.org/repo/$arch_v4/$repo
 SigLevel = Never
 
 [cachyos-core-znver4]
-Server = https://nl-ams.soulharsh007.dev/repo/$arch_v4/$repo
+Server = https://mirror.cachyos.org/repo/$arch_v4/$repo
 SigLevel = Never
 
 [cachyos-extra-znver4]
-Server = https://nl-ams.soulharsh007.dev/repo/$arch_v4/$repo
+Server = https://mirror.cachyos.org/repo/$arch_v4/$repo
 SigLevel = Never
 
 [cachyos]
-Server = https://nl-ams.soulharsh007.dev/repo/$arch/$repo
+Server = https://mirror.cachyos.org/repo/$arch_v4/$repo
 SigLevel = Never
 
 [core]
