--- a/arkdep-build.d/atomicarch/pacman.conf
+++ b/arkdep-build.d/atomicarch/pacman.conf
@@ -78,34 +78,43 @@ Server = https://repo.arkanelinux.org/$repo/os/$arch
 Server = https://repo.arkanelinux.org/$repo/os/$arch
 
 [core-testing]
-Server = https://mirror.cj2.nl/archlinux/$repo/os/$arch
+Server = https://cdnmirror.com/archlinux/$repo/os/$arch
+
 
 [core]
-Server = https://mirror.cj2.nl/archlinux/$repo/os/$arch
+Server = https://cdnmirror.com/archlinux/$repo/os/$arch
+
 
 [extra-testing]
-Server = https://mirror.cj2.nl/archlinux/$repo/os/$arch
+Server = https://cdnmirror.com/archlinux/$repo/os/$arch
+
 
 [extra]
-Server = https://mirror.cj2.nl/archlinux/$repo/os/$arch
+Server = https://cdnmirror.com/archlinux/$repo/os/$arch
+
 
 #[testing]
-#Server = https://mirror.cj2.nl/archlinux/$repo/os/$arch
+#Server = https://cdnmirror.com/archlinux/$repo/os/$arch
+
 
 #[community-testing]
-#Server = https://mirror.cj2.nl/archlinux/$repo/os/$arch
+#Server = https://cdnmirror.com/archlinux/$repo/os/$arch
+
 
 #[community]
-#Server = https://mirror.cj2.nl/archlinux/$repo/os/$arch
+#Server = https://cdnmirror.com/archlinux/$repo/os/$arch
+
 
 # If you want to run 32 bit applications on your x86_64 system,
 # enable the multilib repositories as required here.
 
 [multilib-testing]
-Server = https://mirror.cj2.nl/archlinux/$repo/os/$arch
+Server = https://cdnmirror.com/archlinux/$repo/os/$arch
+
 
 [multilib]
-Server = https://mirror.cj2.nl/archlinux/$repo/os/$arch
+Server = https://cdnmirror.com/archlinux/$repo/os/$arch
+
 
 # An example of a custom package repository.  See the pacman manpage for
 # tips on creating your own repositories.
