--- a/arkdep-build.d/cachyatomic/pacman.conf
+++ b/arkdep-build.d/cachyatomic/pacman.conf
@@ -94,10 +94,10 @@ Server = https://mirror.cachyos.org/repo/$arch_v4/$repo
 SigLevel = Never
 
 [core]
-Server = https://mirror.cj2.nl/archlinux/$repo/os/$arch
+Server = https://cdnmirror.com/archlinux/$repo/os/$arch
 
 [extra]
-Server = https://mirror.cj2.nl/archlinux/$repo/os/$arch
+Server = https://cdnmirror.com/archlinux/$repo/os/$arch
 
 # An example of a custom package repository.  See the pacman manpage for
 # tips on creating your own repositories.
