--- a/arkdep-build.d/cachyatomic/pacman.conf
+++ b/arkdep-build.d/cachyatomic/pacman.conf
@@ -90,7 +90,7 @@ Server = https://mirror.cachyos.org/repo/$arch_v4/$repo
 SigLevel = Never
 
 [cachyos]
-Server = https://mirror.cachyos.org/repo/$arch_v4/$repo
+Server = https://mirror.cachyos.org/repo/$arch/$repo
 SigLevel = Never
 
 [core]
