mirror update, add testing to cachyatomic

--- a/arkdep-build.d/atomicarch/pacman.conf
+++ b/arkdep-build.d/atomicarch/pacman.conf
@@ -78,42 +78,42 @@ Server = https://repo.arkanelinux.org/$repo/os/$arch
 Server = https://repo.arkanelinux.org/$repo/os/$arch
 
 [core-testing]
-Server = https://cdnmirror.com/archlinux/$repo/os/$arch
+Server = http://arch.mirror.constant.com/$repo/os/$arch
 
 
 [core]
-Server = https://cdnmirror.com/archlinux/$repo/os/$arch
+Server = http://arch.mirror.constant.com/$repo/os/$arch
 
 
 [extra-testing]
-Server = https://cdnmirror.com/archlinux/$repo/os/$arch
+Server = http://arch.mirror.constant.com/$repo/os/$arch
 
 
 [extra]
-Server = https://cdnmirror.com/archlinux/$repo/os/$arch
+Server = http://arch.mirror.constant.com/$repo/os/$arch
 
 
 #[testing]
-#Server = https://cdnmirror.com/archlinux/$repo/os/$arch
+#Server = http://arch.mirror.constant.com/$repo/os/$arch
 
 
 #[community-testing]
-#Server = https://cdnmirror.com/archlinux/$repo/os/$arch
+#Server = http://arch.mirror.constant.com/$repo/os/$arch
 
 
 #[community]
-#Server = https://cdnmirror.com/archlinux/$repo/os/$arch
+#Server = http://arch.mirror.constant.com/$repo/os/$arch
 
 
 # If you want to run 32 bit applications on your x86_64 system,
 # enable the multilib repositories as required here.
 
 [multilib-testing]
-Server = https://cdnmirror.com/archlinux/$repo/os/$arch
+Server = http://arch.mirror.constant.com/$repo/os/$arch
 
 
 [multilib]
-Server = https://cdnmirror.com/archlinux/$repo/os/$arch
+Server = http://arch.mirror.constant.com/$repo/os/$arch
 
 
 # An example of a custom package repository.  See the pacman manpage for
