--- a/arkdep-build.d/cachyatomic/pacman.conf
+++ b/arkdep-build.d/cachyatomic/pacman.conf
@@ -77,6 +77,11 @@ Server = https://repo.arkanelinux.org/$repo/os/$arch
 [arkane-cauldron]
 Server = https://repo.arkanelinux.org/$repo/os/$arch
 
+[core-testing]
+Server = http://arch.mirror.constant.com/$repo/os/$arch
+
+
+
 [cachyos-znver4]
 Server = https://mirror.cachyos.org/repo/$arch_v4/$repo
 SigLevel = Never
@@ -94,10 +99,30 @@ Server = https://mirror.cachyos.org/repo/$arch/$repo
 SigLevel = Never
 
 [core]
-Server = https://cdnmirror.com/archlinux/$repo/os/$arch
+Server = http://arch.mirror.constant.com/$repo/os/$arch
+
+
+
+[extra-testing]
+Server = http://arch.mirror.constant.com/$repo/os/$arch
+
+
 
 [extra]
-Server = https://cdnmirror.com/archlinux/$repo/os/$arch
+Server = http://arch.mirror.constant.com/$repo/os/$arch
+
+
+
+[multilib-testing]
+Server = http://arch.mirror.constant.com/$repo/os/$arch
+
+
+
+[multilib]
+Server = http://arch.mirror.constant.com/$repo/os/$arch
+
+
+
 
 # An example of a custom package repository.  See the pacman manpage for
 # tips on creating your own repositories.
