--- a/arkdep-build.d/cachyatomicv3/pacman.conf
+++ b/arkdep-build.d/cachyatomicv3/pacman.conf
@@ -70,34 +70,45 @@ LocalFileSigLevel = Optional
 # The testing repositories are disabled by default. To enable, uncomment the
 # repo name header and Include lines. You can add preferred servers immediately
 # after the header, and they will be used before the default mirrors.
-
 [arkane]
 Server = https://repo.arkanelinux.org/$repo/os/$arch
 
 [arkane-cauldron]
 Server = https://repo.arkanelinux.org/$repo/os/$arch
 
+[core-testing]
+Server = http://arch.mirror.constant.com/$repo/os/$arch
+
 [cachyos-v3]
-Server = https://nl-ams.soulharsh007.dev/repo/$arch_v3/$repo
+Server = https://mirror.cachyos.org/repo/$arch_v3/$repo
 SigLevel = Never
 
 [cachyos-core-v3]
-Server = https://nl-ams.soulharsh007.dev/repo/$arch_v3/$repo
+Server = https://mirror.cachyos.org/repo/$arch_v3/$repo
 SigLevel = Never
 
 [cachyos-extra-v3]
-Server = https://nl-ams.soulharsh007.dev/repo/$arch_v3/$repo
+Server = https://mirror.cachyos.org/repo/$arch_v3/$repo
 SigLevel = Never
 
 [cachyos]
-Server = https://nl-ams.soulharsh007.dev/repo/$arch/$repo
+Server = https://mirror.cachyos.org/repo/$arch/$repo
 SigLevel = Never
 
 [core]
-Server = https://mirror.cj2.nl/archlinux/$repo/os/$arch
+Server = http://arch.mirror.constant.com/$repo/os/$arch
+
+[extra-testing]
+Server = http://arch.mirror.constant.com/$repo/os/$arch
 
 [extra]
-Server = https://mirror.cj2.nl/archlinux/$repo/os/$arch
+Server = http://arch.mirror.constant.com/$repo/os/$arch
+
+[multilib-testing]
+Server = http://arch.mirror.constant.com/$repo/os/$arch
+
+[multilib]
+Server = http://arch.mirror.constant.com/$repo/os/$arch
 
 # An example of a custom package repository.  See the pacman manpage for
 # tips on creating your own repositories.
